--- a/.github/workflows/utils-app-deploy-script.yml
+++ b/.github/workflows/utils-app-deploy-script.yml
@@ -74,7 +74,7 @@ jobs:
                 <p>Its time to hunt those bugs again 🐛<br>
                   We have deployed a new version of our test-wrappid-app, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
                   Start your hunt ${{ secrets.TEST_APP_URL }}<br>
-                  This version comes with some amazing new features and improvements that will make your experience with our package even better.
+                  This version comes with some amazing new features and improvements that will make your experience even better.
                   You can check out the latest release details here https://github.com/wrappid/test-wrappid-app/releases/latest.
                 </p>
 
