--- a/.github/workflows/utils-service-deploy-script.yml
+++ b/.github/workflows/utils-service-deploy-script.yml
@@ -73,8 +73,8 @@ jobs:
 
                 <p>Its time to hunt those bugs again 🐛<br>
                   We have deployed a new version of our test-wrappid-service, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
-                  Start your hunt ${{ secrets.TEST_APP_URL }}<br>
-                  This version comes with some amazing new features and improvements that will make your experience with our package even better.
+                  Start your hunt ${{ secrets.TEST_SERVICE_URL }}<br>
+                  This version comes with some amazing new features and improvements that will make your experience even better.
                   You can check out the latest release details here https://github.com/wrappid/test-wrappid-service/releases/latest.
                 </p>
 
