ci(config): update reuseable create-tag email
resusebale workflow for notifying create-tag completion

Ref: NA

--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -90,7 +90,7 @@ jobs:
           with:
             # email-to: "${{ secrets.IDS }}"
             # email-cc: "${{ secrets.MAINTAINER_ID }}"
-            tag-version: ${{ jobs.create-tag.outputs.tag-version }}
+            tag-version: ${{ needs.create-tag.outputs['create-tag.outputs.tag-version'] }}
             
   
       
