--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -2,7 +2,7 @@ name: Create Release
 
 on:
   # Currently on workflow dispatch manually but we could give other trigger variants later on
-  workflow_dispatch:
+  workflow_call:
     inputs:
       tag_name:
         description: "Tag name for the release (optional)"
