--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -3,11 +3,9 @@ name: Create Release
 on:
   # Currently on workflow dispatch manually but we could give other trigger variants later on
   workflow_call:
-    inputs:
-      tag_name:
-        description: "Tag name for the release (optional)"
-      branch_name:
-        description: "Branch name to build from (optional)"
+    #inputs:
+    #  tag_name:
+    #  description: "Tag name for the release (optional)"
 
 jobs:
   release:
