--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -18,14 +18,15 @@ jobs:
           # REPOSITORY_NAME=${REPOSITORY_NAME##*/}
           echo "Repository name: $REPOSITORY_NAME"
           
-      - name: Get tag name
-        run: |
-          TAG_NAME=${{ inputs.tag_name }}
-          if [[ -z "$TAG_NAME" ]]; then
-            # Use latest tag if not provided
-            TAG_NAME=$(git describe --tags --abbrev-commitish)
-          fi
-          echo "Tag name: $TAG_NAME" >> $GITHUB_OUTPUT
+      - name: Get tag names
+        run: echo all tags ${{ github.event.repository.tags }}
+        # run: |
+        #   TAG_NAME=${{ inputs.tag_name }}
+        #   if [[ -z "$TAG_NAME" ]]; then
+        #     # Use latest tag if not provided
+        #     TAG_NAME=$(git describe --tags --abbrev-commitish)
+        #   fi
+        #   echo "Tag name: $TAG_NAME" >> $GITHUB_OUTPUT
 
       - name: Get branch name
         run: |
