--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -3,9 +3,10 @@ name: Create Release
 on:
   # Currently on workflow dispatch manually but we could give other trigger variants later on
   workflow_call:
-    #inputs:
-    #  tag_name:
-    #  description: "Tag name for the release (optional)"
+    inputs:
+      tag_name:
+      description: "Tag name for the release (optional)"
+      required: false
 
 jobs:
   release:
@@ -15,27 +16,16 @@ jobs:
         run: |
           REPOSITORY_NAME=${{ github.repository }}
           # Extract repository name only (optional)
-          # REPOSITORY_NAME=${REPOSITORY_NAME##*/}
           echo "Repository name: $REPOSITORY_NAME"
           
       - name: Get tag names
-        run: echo all tags ${{ github.event.repository.tags }}
-        # run: |
-        #   TAG_NAME=${{ inputs.tag_name }}
-        #   if [[ -z "$TAG_NAME" ]]; then
-        #     # Use latest tag if not provided
-        #     TAG_NAME=$(git describe --tags --abbrev-commitish)
-        #   fi
-        #   echo "Tag name: $TAG_NAME" >> $GITHUB_OUTPUT
-
-      - name: Get branch name
         run: |
-          BRANCH_NAME=${{ inputs.branch_name }}
-          if [[ -z "$BRANCH_NAME" ]]; then
-            # Use development branch if not provided
-            BRANCH_NAME="development"
+          TAG_NAME=${{ inputs.tag_name }}
+          if [[ -z "$TAG_NAME" ]]; then
+            # Use latest tag if not provided
+            TAG_NAME=$(git describe --tags --abbrev=0)
           fi
-          echo "Branch name: $BRANCH_NAME" >> $GITHUB_OUTPUT
+          echo "Tag name: $TAG_NAME" >> $GITHUB_OUTPUT
 
       - name: Create release
         uses: actions/create-release@v1
