--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -3,6 +3,13 @@ name: Create Release
 on:
   # Currently on workflow dispatch manually but we could give other trigger variants later on
   workflow_call:
+    inputs:
+      tag_name:
+        required: true
+        type: string
+      branch_name:
+        required: true
+        type: string
 
 jobs:
   release:
