--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,7 +12,7 @@ on:
         type: string
 
 jobs:
-  release:
+  prerequisite:
     runs-on: ubuntu-latest
     steps:      
       - name: Get repository name
@@ -35,6 +35,10 @@ jobs:
           TAG_NAME=${{ inputs.tag_name }}
           echo "tag_name=$TAG_NAME" >> "$GITHUB_OUTPUT"
 
+  release:
+    runs-on: ubuntu-latest
+    needs: prerequisite
+    steps:
       - name: Create release
         uses: actions/create-release@v1
         env:
