--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,21 +15,25 @@ jobs:
   prerequisite:
     runs-on: ubuntu-latest
     outputs:
-      repository_name: ${{ steps.get-inputs.outputs.repository_name }}
-      branch_name: ${{ steps.get-inputs.outputs.branch_name }}
-      tag_name: ${{ steps.get-inputs.outputs.tag_name }}
+      repository: ${{ steps.repository.outputs.repository_name }}
+      branch: ${{ steps.branch.outputs.branch_name }}
+      tag: ${{ steps.tag.outputs.tag_name }}
     steps:
-      - id: get-inputs
+      - id: repository
         run: |
           REPOSITORY_NAME=${{ github.repository }}
           # Extract repository name only (optional)
           echo "repository_name=$REPOSITORY_NAME" >> "$GITHUB_OUTPUT"
+      - id: branch
+        run: |
           BRANCH_NAME=${{ inputs.branch_name }}
           if [[ -z "$BRANCH_NAME" ]]; then
             # Use development branch if not provided
             BRANCH_NAME="development"
           fi
           echo "branch_name=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
+      - id: tag
+        run: |
           TAG_NAME=${{ inputs.tag_name }}
           echo "tag_name=$TAG_NAME" >> "$GITHUB_OUTPUT"
 
@@ -37,12 +41,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: prerequisite
     steps:
+      - name: Echo prerequisites
+        run: |
+          echo repository: ${{ needs.prerequisite.outputs.repository }}
+          echo branch: ${{ needs.prerequisite.outputs.branch }}
+          echo tag: ${{ needs.prerequisite.outputs.tag }}
       - name: Create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ needs.prerequisite.outputs.tag_name }}
-          target_commitish: ${{ needs.prerequisite.outputs.branch_name }}
-          release_body: "Automated release from ${{ needs.prerequisite.outputs.branch_name }} branch"
+          tag_name: ${{ needs.prerequisite.outputs.tag }}
+          target_commitish: ${{ needs.prerequisite.outputs.branch }}
+          release_body: "Automated release from ${{ needs.prerequisite.outputs.branch }} branch"
           
