--- a/.github/workflows/send-email-tag-created.yml
+++ b/.github/workflows/send-email-tag-created.yml
@@ -45,10 +45,10 @@ jobs:
 
                         <p>
                         Tag released ${{ github.event.repository.name }}, ${{ inputs.tag-version }}. 🚀<br>
-                        You can check out the details on our <a href="https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/v${{ inputs.tag-version }}">${{ github.event.repository.name }} page</a>.
+                        You can check out the details by clicking below link
+                        https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/v${{ inputs.tag-version }}
                         </p>
-                        https://github.com/wrappid/{{ Repository Name }}/releases/tag/{{ Tag version }}
-
+                    
                         <p>Thanks and Regards,<br>
                         Wrappid Care</p>
                         <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "Create Tag - CI" GitHub Action</footer>
