--- a/.github/workflows/util-create-service-release.yml
+++ b/.github/workflows/util-create-service-release.yml
@@ -1,7 +1,7 @@
 on:
     workflow_call:
 
-name: Create App Release - CD
+name: Create Service Release - CD
 
 jobs:
   create-release:
@@ -97,40 +97,17 @@ jobs:
       - name: Check Wrappid Version
         run: wrappid --version
 
-#       - name: Wrappid setup mobile
-#         run: |
-#           gh auth status
-#           echo Starting Setup.........................
-#           wrappid setup mobile --env=stage
-
-#       - name: Setup JDK 11
-#         uses: actions/setup-java@v3
-#         with:
-#           java-version: '11'
-#           distribution: 'temurin'
-#           cache: gradle
-# #           cache-dependency-path: /.wrappid/runtime/mobile/android/
-
-#       - name: Change Permission of Gradle
-#         run: cd .wrappid/runtime/mobile/android/ && chmod +x gradlew
-
-#       - name: Build Wrappid android
-#         run: |
-#           gh auth status
-#           echo Starting Build.........................
-#           wrappid build android
-
-      - name: Wrappid Setup Web
+      - name: Wrappid Setup Service
         run: |
           gh auth status
           echo Starting Build.........................
-          wrappid setup web --env=stage
+          wrappid setup service --env=stage
 
-      - name: Build wrappid web
+      - name: Build wrappid service
         run: |
           gh auth status
           echo Starting Build.........................
-          wrappid build web
+          wrappid build service
 
       - name: Extract version
         id: extract_version
@@ -144,27 +121,19 @@ jobs:
 
       - name: Zip build
         run: |
-          cd build/web
-          zip -r web-v${{ steps.extract_version.outputs.version }}.zip *
+          cd build/service
+          zip -r service-v${{ steps.extract_version.outputs.version }}.zip *
 
       - run: ls -l
 
-      - name: Move Web zip to root
-        run: mv build/web/web-v${{ steps.extract_version.outputs.version }}.zip web-v${{ steps.extract_version.outputs.version }}.zip
+      - name: Move Service zip to root
+        run: mv build/service/service-v${{ steps.extract_version.outputs.version }}.zip service-v${{ steps.extract_version.outputs.version }}.zip
 
-      # - name: Move apk to root
-      #   run: mv build/mobile/android/app-debug.apk android-v${{ steps.extract_version.outputs.version }}.apk
 
       - run: ls -l
 
       - name: Get wrappid logs
         run: cp $(npm root -g)/@wrappid/logs/logs.log wrappid-logs-v${{ steps.extract_version.outputs.version }}.log
-
-      # - name: Get tags
-      #   run: git fetch --tags origin
-
-      # - name: Create tag
-      #   run: git tag v${{ steps.extract_version.outputs.version }} && git push origin v${{ steps.extract_version.outputs.version }}
 
       - name: Generate Release notes
         run: bash .github/scripts/release_notes.sh
@@ -181,27 +150,17 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload Release Asset Web
-        id: upload-web-release-asset 
+      - name: Upload Release Asset Service
+        id: upload-service-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT}} # Personal Access Token
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./web-v${{ steps.extract_version.outputs.version }}.zip
-          asset_name: "web-v${{ steps.extract_version.outputs.version }}.zip"
+          asset_path: ./service-v${{ steps.extract_version.outputs.version }}.zip
+          asset_name: "service-v${{ steps.extract_version.outputs.version }}.zip"
           asset_content_type: application/zip
 
-      # - name: Upload Release Asset Android
-      #   id: upload-android-release-asset 
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.PAT }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-      #     asset_path: ./android-v${{ steps.extract_version.outputs.version }}.apk
-      #     asset_name: "android-v${{ steps.extract_version.outputs.version }}.apk"
-      #     asset_content_type: application/vnd.android.package-archive
 
       - name: Upload Release Asset Wrappid-Logs
         id: upload-log-release-asset 
@@ -214,13 +173,6 @@ jobs:
           asset_name: "wrappid-logs-v${{ steps.extract_version.outputs.version }}.log"
           asset_content_type: text/plain
 
-
-      # - name: 🚀 Create Release
-      #   if: ${{ steps.check-tag.outputs.release-exists == 'failure' }}
-      #   id: create_release
-      #   run: gh release create ${{ steps.latest-tag.outputs.tag }} *.tgz --title ${{ steps.latest-tag.outputs.tag }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     call-send-email-released:
           needs: create-release
