--- a/.github/workflows/send-email-tag-created.yml
+++ b/.github/workflows/send-email-tag-created.yml
@@ -44,7 +44,7 @@ jobs:
                         <p>Hi Maintainers,</p>
 
                         <p>
-                        Tag created ${{ github.event.repository.name }}, ${{ inputs.tag-version }}. 🚀<br>
+                        Tag created ${{ github.event.repository.name }} ${{ inputs.tag-version }}. 🚀<br>
                         You can check out the details by clicking below link
                         https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/v${{ inputs.tag-version }}
                         </p>
