--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -34,16 +34,18 @@ jobs:
         - name: 👀 Process Inputs
           id: release-type-input
           run: |
-            if [ -z "${{ github.event.inputs.version_type }}" ]; then
-              echo "Setting default version type"
-              export VERSION_TYPE_DEFAULT=" -r patch"
-            else
-              export VERSION_TYPE_DEFAULT="${{ github.event.inputs.version_type }}"
-            fi
+            case "${{ github.event.inputs.version_type }}" in
+              " -r patch" | " -r major" | " -r minor" )
+                VERSION_TYPE_DEFAULT="${{ github.event.inputs.version_type }}"
+                ;;
+              * )
+                echo "Invalid version type provided, defaulting to ' -r patch'"
+                VERSION_TYPE_DEFAULT=" -r patch"
+                ;;
+            esac
             echo "Version type: $VERSION_TYPE_DEFAULT"
             echo "::set-output name=version_type::$VERSION_TYPE_DEFAULT"
-  
-  
+
         - name: ⬇️ Setup Project
           run: | 
            echo Installing Node Modules
