--- a/.github/workflows/utils-app-deploy-script.yml
+++ b/.github/workflows/utils-app-deploy-script.yml
@@ -7,36 +7,14 @@ jobs:
   app-deploy:
     runs-on: ubuntu-latest
     name: App Deploy
+    outputs:
+      tag-version: ${{ steps.current-tag.outputs.tag }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
             token: ${{ secrets.PAT }}
-
-      - name: Extract version
-        id: extract_version
-        uses: Saionaro/extract-package-version@v1.0.6
-
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.AWS_STAGE_HOST }}       
-          username: ${{ secrets.AWS_STAGE_USER }}     
-          key: ${{ secrets.AWS_STAGE_SSH_KEY }}
-          port: 22
-          script: |
-            sudo -u ec2-user curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/app-deploy.sh | bash -s ${{ github.event.repository.name }}
-  
-  notify:
-    needs: app-deploy
-    runs-on: ubuntu-latest
-    name: Notify through email
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT }}
-          fetch-depth: 0
 
       - name: Get Current Tag
         id: current-tag
@@ -47,44 +25,20 @@ jobs:
       - name: Print received tag from action
         run: echo ${{ steps.current-tag.outputs.tag }}
 
-      - name: Send mail
-        uses: dawidd6/action-send-mail@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
         with:
-            server_address: smtp.gmail.com
-            server_port: 465
-            username: ${{secrets.MAIL_USERNAME}}
-            password: ${{secrets.MAIL_PASSWORD}}
-            secure: true
-            from: Wrappid Care
-            to: ${{secrets.IDS}}
-            cc: ${{secrets.MAINTAINER_ID}}
-            subject: Deployed - ${{ github.event.repository.name }} - ${{ steps.current-tag.outputs.tag }}. 🚀
-            html_body: |
-              <html lang="en">
+          host: ${{ secrets.AWS_STAGE_HOST }}       
+          username: ${{ secrets.AWS_STAGE_USER }}     
+          key: ${{ secrets.AWS_STAGE_SSH_KEY }}
+          port: 22
+          script: |
+            sudo -u ec2-user curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/app-deploy.sh | bash -s ${{ github.event.repository.name }}
 
-              <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Exciting News from Wrappiders</title>
-              </head>
-
-              <body>
-                <p>Hi Wrappider Testers 🕵🏽‍♂️,</p>
-
-                <p>Its time to hunt those bugs again 🐛<br>
-                  We have deployed a new version of our ${{ github.event.repository.name }}, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
-                  Start your hunt ${{ secrets.TEST_APP_URL }}<br>
-                  This version comes with some amazing new features and improvements that will make your experience even better.
-                  You can check out the latest release details here https://github.com/wrappid/test-wrappid-app/releases/tag/${{ steps.current-tag.outputs.tag }}.
-                </p>
-
-                <p>Thanks and Regards,<br>
-                  Wrappid Care</p>
-                  <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action</footer
-              </body>
-
-              </html>
-            ignore_cert: true
-            convert_markdown: true
-            # attachments: attachments.zip,git.diff
-            priority: normal
+  call-send-email-deployed:
+      needs: app-deploy
+      permissions: write-all
+      uses: wrappid/workflows/.github/workflows/send-email-deploy.yml@main
+      secrets: inherit
+      with:
+        tag-version: ${{ needs.app-deploy.outputs.tag-version }}
