--- a/.github/workflows/utils-service-deploy-script.yml
+++ b/.github/workflows/utils-service-deploy-script.yml
@@ -7,15 +7,23 @@ jobs:
   service-deploy:
     runs-on: ubuntu-latest
     name: Serivce Deploy
+    outputs:
+      tag-version: ${{ steps.current-tag.outputs.tag }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
             token: ${{ secrets.PAT }}
 
-      - name: Extract version
-        id: extract_version
-        uses: Saionaro/extract-package-version@v1.0.6
+      - name: Get Current Tag
+        id: current-tag
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+        with:
+          fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
+
+      - name: Print received tag from action
+        run: echo ${{ steps.current-tag.outputs.tag }}
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
@@ -27,64 +35,11 @@ jobs:
           script: |
             curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/service-deploy.sh | bash -s ${{ github.event.repository.name }}
 
-  notify:
-    needs: service-deploy
-    runs-on: ubuntu-latest
-    name: Notify through email
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT }}
-          fetch-depth: 0
 
-      - name: Get Current Tag
-        id: current-tag
-        uses: WyriHaximus/github-action-get-previous-tag@v1
-        with:
-          fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
-
-      - name: Print received tag from action
-        run: echo ${{ steps.current-tag.outputs.tag }}
-
-      - name: Send mail
-        uses: dawidd6/action-send-mail@v3
-        with:
-            server_address: smtp.gmail.com
-            server_port: 465
-            username: ${{secrets.MAIL_USERNAME}}
-            password: ${{secrets.MAIL_PASSWORD}}
-            secure: true
-            from: Wrappid Care
-            to: ${{secrets.IDS}}
-            cc: ${{secrets.MAINTAINER_ID}}
-            subject: Deployed - ${{ github.event.repository.name }} - ${{ steps.current-tag.outputs.tag }}. 🚀
-            html_body: |
-              <html lang="en">
-
-              <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Exciting News from Wrappiders</title>
-              </head>
-
-              <body>
-                <p>Hi Wrappider Testers 🕵🏽‍♂️,</p>
-
-                <p>Its time to hunt those bugs again 🐛<br>
-                  We have deployed a new version of our ${{ github.event.repository.name }}, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
-                  Start your hunt ${{ secrets.TEST_SERVICE_URL }}<br>
-                  This version comes with some amazing new features and improvements that will make your experience even better.
-                  You can check out the latest release details here https://github.com/wrappid/test-wrappid-service/releases/tag/${{ steps.current-tag.outputs.tag }}
-                </p>
-
-                <p>Thanks and Regards,<br>
-                  Wrappid Care</p>
-                  <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action</footer>
-              </body>
-
-              </html>
-            ignore_cert: true
-            convert_markdown: true
-            # attachments: attachments.zip,git.diff
-            priority: normal
+  call-send-email-deployed:
+      needs: service-deploy
+      permissions: write-all
+      uses: wrappid/workflows/.github/workflows/send-email-deploy.yml@main
+      secrets: inherit
+      with:
+        tag-version: ${{ needs.service-deploy.outputs.tag-version }}
