--- a/.github/workflows/send-email-tag-created.yml
+++ b/.github/workflows/send-email-tag-created.yml
@@ -16,6 +16,15 @@ jobs:
         name: Send Email
         runs-on: ubuntu-latest
         steps:
+          - name: Sender Name configure
+            id: sender-name
+            run: |
+                if [[ -n "${{ secrets.SENDER_NAME }}" ]]; then
+                    echo "SENDER_NAME=${{ secrets.SENDER_NAME }}" >> $GITHUB_ENV
+                else
+                    REPOSITORY_OWNER_NAME=${{ github.repository_owner }}
+                    echo "SENDER_NAME=${REPOSITORY_OWNER_NAME^}" >> $GITHUB_ENV
+                fi
 
 ## TODO: USE EMAIL TEMPLATES
 
@@ -27,7 +36,7 @@ jobs:
                 username: ${{ secrets.MAIL_USERNAME }}
                 password: ${{ secrets.MAIL_PASSWORD }}
                 secure: true
-                from: Wrappid Care
+                from: $SENDER_NAME
                 to: ${{ secrets.IDS }}
                 cc: ${{ secrets.MAINTAINER_ID }}
                 subject: Tag Created - ${{ github.event.repository.name }} v${{ inputs.tag-version }}. 🚀
@@ -37,7 +46,6 @@ jobs:
                     <head>
                         <meta charset="UTF-8">
                         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                        <title>Exciting News from Wrappiders</title>
                     </head>
 
                     <body style="font-size: 1rem;">
@@ -50,7 +58,7 @@ jobs:
                         </p>
                     
                         <p>Thanks and Regards,<br>
-                        Wrappid Care</p>
+                        $SENDER_NAME</p>
                         <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "Create Tag - CI" GitHub Action</footer>
                     </body>
 
