--- a/.github/workflows/send-email-released.yml
+++ b/.github/workflows/send-email-released.yml
@@ -1,58 +1,68 @@
 name: Send Email - Released
 on:
-    workflow_call:
-        inputs:
-            # email-to:
-            #     required: true
-            #     type: string
-            # email-cc:
-            #     required: true
-            #     type: string
-            tag-version:
-                required: true
-                type: string
+  workflow_call:
+    inputs:
+      # email-to:
+      #     required: true
+      #     type: string
+      # email-cc:
+      #     required: true
+      #     type: string
+      tag-version:
+          required: true
+          type: string
+
 jobs:
-    send-email:
-        name: Send Email
-        runs-on: ubuntu-latest
-        steps:
+  send-email:
+    name: Send Email
+    runs-on: ubuntu-latest
+    steps:
 
-## TODO: USE EMAIL TEMPLATES
+      - name: Sender Name configure
+        id: sender-name
+        run: |
+          if [[ -n "${{ secrets.SENDER_NAME }}" ]]; then
+            echo "SENDER_NAME=${{ secrets.SENDER_NAME }}" >> $GITHUB_ENV
+          else
+            REPOSITORY_OWNER_NAME=${{ github.repository_owner }}
+            echo "SENDER_NAME=${REPOSITORY_OWNER_NAME^}" >> $GITHUB_ENV
+          fi
 
-          - name: 📧 Send mail
-            uses: dawidd6/action-send-mail@v3
-            with:
-                server_address: smtp.gmail.com
-                server_port: 465
-                username: ${{ secrets.MAIL_USERNAME }}
-                password: ${{ secrets.MAIL_PASSWORD }}
-                secure: true
-                from: Wrappid Care
-                to: ${{ secrets.IDS }}
-                cc: ${{ secrets.MAINTAINER_ID }}
-                subject: Released - ${{ github.event.repository.name }} ${{ inputs.tag-version }}. 🚀
-                html_body: |
-                    <html lang="en">
+      ## TODO: USE EMAIL TEMPLATES
 
-                    <head>
-                        <meta charset="UTF-8">
-                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                        <title>Exciting News from Wrappiders</title>
-                    </head>
+      - name: 📧 Send mail
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          secure: true
+          from: $SENDER_NAME
+          to: ${{ secrets.IDS }}
+          cc: ${{ secrets.MAINTAINER_ID }}
+          subject: Released - ${{ github.event.repository.name }} ${{ inputs.tag-version }}. 🚀
+          html_body: |
+            <html lang="en">
 
-                    <body style="font-size: 1rem;">
-                        <p>Hi Maintainers,</p>
+            <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            </head>
 
-                        <p>
-                        ${{ github.event.repository.name }} ${{ inputs.tag-version }} released. 🚀<br>
-                        You can check out the details by clicking below link
-                        https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}
-                        </p>
-                    
-                        <p>Thanks and Regards,<br>
-                        Wrappid Care</p>
-                        <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action</footer>
-                    </body>
+            <body style="font-size: 1rem;">
+              <p>Hi Maintainers,</p>
 
-                    </html>
+              <p>
+              ${{ github.event.repository.name }} ${{ inputs.tag-version }} released. 🚀<br>
+              You can check out the details by clicking below link
+              https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}
+              </p>
+          
+              <p>Thanks and Regards,<br>
+              $SENDER_NAME</p>
+              <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action</footer>
+            </body>
+
+            </html>
 
