ci(config): :wrench: update email templates
update email template action

Ref: #1, #2, #3

--- a/.github/workflows/send-email-tag-created.yml
+++ b/.github/workflows/send-email-tag-created.yml
@@ -36,7 +36,7 @@ jobs:
                 username: ${{ secrets.MAIL_USERNAME }}
                 password: ${{ secrets.MAIL_PASSWORD }}
                 secure: true
-                from: $SENDER_NAME
+                from: ${{ env.SENDER_NAME }}
                 to: ${{ secrets.IDS }}
                 cc: ${{ secrets.MAINTAINER_ID }}
                 subject: Tag Created - ${{ github.event.repository.name }} v${{ inputs.tag-version }}. 🚀
@@ -58,7 +58,7 @@ jobs:
                         </p>
                     
                         <p>Thanks and Regards,<br>
-                        $SENDER_NAME</p>
+                        ${{ env.SENDER_NAME }}</p>
                         <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "Create Tag - CI" GitHub Action</footer>
                     </body>
 
