--- a/.github/workflows/send-email-released.yml
+++ b/.github/workflows/send-email-released.yml
@@ -56,7 +56,7 @@ jobs:
               <p>
               ${{ github.event.repository.name }} ${{ inputs.tag-version }} released. 🚀<br>
               You can check out the details by clicking below link
-              https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}
+              https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}
               </p>
           
               <p>Thanks and Regards,<br>
