--- a/.github/workflows/send-email-tag-created.yml
+++ b/.github/workflows/send-email-tag-created.yml
@@ -54,7 +54,7 @@ jobs:
                         <p>
                         Tag created ${{ github.event.repository.name }} ${{ inputs.tag-version }}. 🚀<br>
                         You can check out the details by clicking below link
-                        https://github.com/wrappid/${{ github.event.repository.name }}/releases/tag/v${{ inputs.tag-version }}
+                        https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/tag/v${{ inputs.tag-version }}
                         </p>
                     
                         <p>Thanks and Regards,<br>
