feat(config): :wrench: update email templates
NA

Ref: #1, #2, #3

--- a/.github/workflows/util-create-app-release.yml
+++ b/.github/workflows/util-create-app-release.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Print final tag to checkout
         run: echo ${{ steps.tag.outputs.tag }}
 
-      - name: 🛒 Checkout Repository
+      - name: 🛒 Checkout Tag
         uses: actions/checkout@v4
         with:
           ref: ${{ steps.tag.outputs.tag }}
@@ -80,9 +80,6 @@ jobs:
       #     fi
       #     echo "Version type: $TAG_VERSION_DEFAULT"
       #     echo "::set-output name=tag-version::$TAG_VERSION_DEFAULT"
-
-## TODO: CHECKOUT TAG
-
 
       - name: ⬇️ Setup Project
         run: | 
@@ -167,7 +164,7 @@ jobs:
       #   run: git tag v${{ steps.extract_version.outputs.version }} && git push origin v${{ steps.extract_version.outputs.version }}
 
       - name: Generate Release notes
-        run: bash .github/scripts/release_notes.sh
+        run: curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/util-scripts/release_notes.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
 
       - name: Create Release
         id: create_release
