feat(config): :wrench: update cerate-tag
NA

Ref: #1, #2, #3

--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -79,7 +79,9 @@ jobs:
         #    by Publish CI"
         #   env:
         #     GITHUB_TOKEN: ${{ secrets.PAT }}
-  
+        - name: Prepare for commit
+          run: rm -f .gitignore
+
         - name: ⬆️ Update version
           run:  npm run release -- ${{ steps.release-type-input.outputs.version_type}}
   
